test_suite_native_only/tests/ui/compilefail/captcha_not_identified.stderr
error: Field containing hcaptcha not identified

         = help: The field containing the hcaptcha response string must be identified with #[captcha]

               #[derive(Hcaptcha)]
               struct MyStruct {
                   #[captcha]
                   hcaptcha: String,
               }

 --> tests/ui/compilefail/captcha_not_identified.rs:4:8
  |
4 | struct Test {
  |        ^^^^
